objects/Service_Request__c.object
<CustomObject>
    <description>Service Request custom object supports the Fess, VM, CBSR and Issue intake processes.</description>
    <fields>
        <fullName>Account_Executive_Email__c</fullName>
        <formula>Account_Executive__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Executive Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive_Phone__c</fullName>
        <formula>Account_Executive__r.Phone</formula>
        <label>Account Executive Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to capture the Account Executive related to the Opportunity</description>
        <label>Account Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ServiceRequests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Time_Comments__c</fullName>
        <label>Additional Time Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Adjustment_Amount__c</fullName>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adjustment_Entry_Date__c</fullName>
        <label>Adjustment Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adjustment_Process_Date__c</fullName>
        <label>Adjustment Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Adjustment_Request_ID__c</fullName>
        <label>Adjustment Request ID</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjustment_Request_Link__c</fullName>
        <label>Adjustment Request Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Adjustment_Request_Type_Indicator__c</fullName>
        <label>Adjustment Request Type Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Mass</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adjustment_Type__c</fullName>
        <label>Adjustment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_Contact_Email__c</fullName>
        <formula>Alternative_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternative Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_Contact_Phone__c</fullName>
        <formula>Alternative_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alternative Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternative Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Factory</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BARS_Customer_Number__c</fullName>
        <label>BARS Customer Number</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carve_Outs__c</fullName>
        <label>Carve Outs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rx</fullName>
                </value>
                <value>
                    <fullName>MD/CD</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>HCM</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Wellness</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Person_on_employer_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Person on Employer site</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Requests (Contact Person on Employer site)</relationshipLabel>
        <relationshipName>Service_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Control_Par_Plan__c</fullName>
        <label>Control Par (State)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Meeting__c</fullName>
        <label>Date of Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dedicated_customer_service__c</fullName>
        <label>Dedicated customer service #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_MSR__c</fullName>
        <formula>Marketing_Service_Rep__r.Email</formula>
        <label>Email (MSR)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>01:00 AM</fullName>
                </value>
                <value>
                    <fullName>02:00 AM</fullName>
                </value>
                <value>
                    <fullName>03:00 AM</fullName>
                </value>
                <value>
                    <fullName>04:00 AM</fullName>
                </value>
                <value>
                    <fullName>05:00 AM</fullName>
                </value>
                <value>
                    <fullName>06:00 AM</fullName>
                </value>
                <value>
                    <fullName>07:00 AM</fullName>
                </value>
                <value>
                    <fullName>08:00 AM</fullName>
                </value>
                <value>
                    <fullName>09:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                    <default>true</default>
                    <label>5:00 PM</label>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
                <value>
                    <fullName>10:00 PM</fullName>
                </value>
                <value>
                    <fullName>11:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment_Contact_Info__c</fullName>
        <inlineHelpText>Name, Number and Email</inlineHelpText>
        <label>Contact at Site</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Enrollment_Specialist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enrollment Specialist</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Enrollment Specialist</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Requests (Enrollment Specialist)</relationshipLabel>
        <relationshipName>Service_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Approver_Name__c</fullName>
        <label>Final Approver Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>History_Tracking__c</fullName>
        <description>Added as Part of SFDC-7243 GFRA to allow capturing of Comments in the Approval Process (Not for use on Page Layout)</description>
        <inlineHelpText>Added as Part of SFDC-7243 GFRA to allow capturing of Comments in the Approval Process (Not for use on Page Layout)</inlineHelpText>
        <label>History Tracking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <label>Implementation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Date_Time__c</fullName>
        <label>Integration Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Integration_Error_Message__c</fullName>
        <label>Integration Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <label>Integration Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Failed_To_Receive</fullName>
                </value>
                <value>
                    <fullName>Failed_To_Send</fullName>
                </value>
                <value>
                    <fullName>Result_Sent</fullName>
                </value>
                <value>
                    <fullName>Received Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Rejection_Reason__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Rejection Reason</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Additional language required</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Meeting_Date__c</fullName>
        <description>Date of the last time the Date of Meeting field was changed.</description>
        <label>Last Modified Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketing_Service_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Service Rep (MSR)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_of_EE_s_employees_on_site__c</fullName>
        <label>No of EE’s (employees on-site)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Meeting Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Service Requests</relationshipLabel>
        <relationshipName>Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_MSR__c</fullName>
        <formula>Marketing_Service_Rep__r.Phone</formula>
        <label>Phone (MSR)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Advantage</fullName>
                </value>
                <value>
                    <fullName>Blue Care Connection</fullName>
                </value>
                <value>
                    <fullName>Blue Edge Vitality Rew</fullName>
                </value>
                <value>
                    <fullName>Blue Edge Wellness Rew</fullName>
                </value>
                <value>
                    <fullName>Blue Scripts</fullName>
                </value>
                <value>
                    <fullName>CMM</fullName>
                </value>
                <value>
                    <fullName>Dental PPO</fullName>
                </value>
                <value>
                    <fullName>DHMO</fullName>
                </value>
                <value>
                    <fullName>D-Trad</fullName>
                </value>
                <value>
                    <fullName>EPO</fullName>
                </value>
                <value>
                    <fullName>HCA</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>HMOI</fullName>
                </value>
                <value>
                    <fullName>HSA</fullName>
                </value>
                <value>
                    <fullName>LTD Pur HCA</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>RxCard</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Blue Care Connection(Boeing Custom)</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>BVA</fullName>
                </value>
                <value>
                    <fullName>Blue Choice Select</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_Location_of_event__c</fullName>
        <label>Address/Location of event</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_Location_type__c</fullName>
        <label>Site/Location type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending with Accountant/Manager</fullName>
                    <label>Pending with Lead Accountant/Manager</label>
                </value>
                <value>
                    <fullName>Pending with Director</fullName>
                </value>
                <value>
                    <fullName>Pending with Manager</fullName>
                </value>
                <value>
                    <fullName>Pending with SLT</fullName>
                </value>
                <value>
                    <fullName>Pending with SVP</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>01:00 AM</fullName>
                </value>
                <value>
                    <fullName>02:00 AM</fullName>
                </value>
                <value>
                    <fullName>03:00 AM</fullName>
                </value>
                <value>
                    <fullName>04:00 AM</fullName>
                </value>
                <value>
                    <fullName>05:00 AM</fullName>
                </value>
                <value>
                    <fullName>06:00 AM</fullName>
                </value>
                <value>
                    <fullName>07:00 AM</fullName>
                </value>
                <value>
                    <fullName>08:00 AM</fullName>
                    <default>true</default>
                    <label>08:00 AM</label>
                </value>
                <value>
                    <fullName>09:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
                <value>
                    <fullName>10:00 PM</fullName>
                </value>
                <value>
                    <fullName>11:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AS400 &amp; BlueStar Update Completed</fullName>
                </value>
                <value>
                    <fullName>AS400 &amp; BlueStar Update Pending</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Assigned to CS</fullName>
                </value>
                <value>
                    <fullName>BlueSTAR Entry Complete</fullName>
                </value>
                <value>
                    <fullName>BlueSTAR Walkthrough Complete</fullName>
                </value>
                <value>
                    <fullName>BW Approval Pending</fullName>
                </value>
                <value>
                    <fullName>BW Approval Received</fullName>
                </value>
                <value>
                    <fullName>BW Approval Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>CDHP Team Approval Pending</fullName>
                </value>
                <value>
                    <fullName>CDHP Team Approval Received</fullName>
                </value>
                <value>
                    <fullName>Client Approval Pending</fullName>
                </value>
                <value>
                    <fullName>Client Approval Received</fullName>
                </value>
                <value>
                    <fullName>Client Approval Received with Changes</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <color>#F3D904</color>
                    <label>Closed</label>
                </value>
                <value>
                    <fullName>Closed (Marked for Delete)</fullName>
                </value>
                <value>
                    <fullName>Closed - No Response</fullName>
                    <color>#A53711</color>
                    <label>Closed - No Response</label>
                </value>
                <value>
                    <fullName>Completed but No Signature Required</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Deferred for Business Decision</fullName>
                </value>
                <value>
                    <fullName>Deferred to Business Decision</fullName>
                </value>
                <value>
                    <fullName>Design In Progress</fullName>
                </value>
                <value>
                    <fullName>Developing Content</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>DTU Approval Pending</fullName>
                </value>
                <value>
                    <fullName>DTU Approval Received</fullName>
                </value>
                <value>
                    <fullName>DTU Approval Rejected</fullName>
                </value>
                <value>
                    <fullName>Executed</fullName>
                </value>
                <value>
                    <fullName>FEAK Approval Pendig</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitter_Email__c</fullName>
        <label>Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Submitter_Name__c</fullName>
        <description>provided from adjuster tool integration call</description>
        <label>Submitter Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Event__c</fullName>
        <label>Type of Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benefits Fair/Enrollment</fullName>
                </value>
                <value>
                    <fullName>Consultant Presentation +Q/A</fullName>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Request</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Account_Executive__c</columns>
        <columns>Account_Executive_Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <listViews>
        <fullName>GFRA_Request</fullName>
        <columns>NAME</columns>
        <columns>Adjustment_Type__c</columns>
        <columns>Adjustment_Request_ID__c</columns>
        <columns>Adjustment_Entry_Date__c</columns>
        <columns>Adjustment_Amount__c</columns>
        <columns>Adjustment_Request_Type_Indicator__c</columns>
        <columns>Status__c</columns>
        <columns>Stage__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Service_Request__c.GFRA_Adjustment</value>
        </filters>
        <label>ALL GFRA Request</label>
    </listViews>
    <listViews>
        <fullName>My_GFRA_Owned</fullName>
        <columns>NAME</columns>
        <columns>Adjustment_Request_ID__c</columns>
        <columns>Adjustment_Type__c</columns>
        <columns>Stage__c</columns>
        <columns>Status__c</columns>
        <columns>Adjustment_Request_Type_Indicator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Service_Request__c.GFRA_Adjustment</value>
        </filters>
        <label>My GFRA  Adjustment Requests</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Service Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <recordTypes>
        <fullName>GFRA_Adjustment</fullName>
        <active>true</active>
        <description>Group Finance Risk Assessment requests</description>
        <label>GFRA - Adjustment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Open_Enrollment</fullName>
        <active>true</active>
        <description>Event to provide information about benefits to new Group/Account or Renewals</description>
        <label>Open Enrollment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Open_Enrollment_Request_Edit</fullName>
        <active>true</active>
        <description>Only the Open Enrollment admins are able to Edit and Delete Records as part of the Open Enrollment Request within the Mktg Hub once request has been submitted.</description>
        <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(Stage__c), &apos;Submitted&apos;),

$User.Id &lt;&gt;&apos;00533000003Xo8E&apos;,
$User.Id &lt;&gt;&apos;00533000003Xo85&apos;,
$User.Id &lt;&gt;&apos;00533000003Xj2h&apos;,
 $Profile.Name &lt;&gt;&apos;System Administrator&apos;
)</errorConditionFormula>
        <errorMessage>Since Open Enrollment request is Submitted, only Open Enrollment admin can edit it now.</errorMessage>
    </validationRules>
</CustomObject>